# managed-compute-examples

./: Dockerfile  docker-compose.yml  pyproject.toml
go/: Dockerfile  go.mod  go.sum  main.go
python/: Dockerfile  docker-compose.yml  pyproject.toml
python/simple/: main.py
simple/: main.py
typescript/: Dockerfile  package.json  pnpm-lock.yaml
typescript/fanout/src/: index.ts
typescript/simple/: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml
typescript/simple/src/: index.ts
typescript/src/: index.ts
