[tool.poetry]
name = "simple"
version = "0.1.0"
description = ""
authors = ["gabriel ruttner <gabriel.ruttner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hatchet-sdk = {version = "^0.40.0a1", allow-prereleases = true}


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
